# bhram--H

./: .gitignore  AGENTS.md  EXTERNAL_AGENT_CONNECTIVITY.md  HYBRID_LOCAL_AI_ARCHITECTURE.md  ORGANIZATIONAL_INTELLIGENCE_ENGINE.md  README.md  start_backend.sh  test_distill.py  test_line.py
.github/workflows/: ci.yml
backend/: analyzer.py  claude_desktop_config.json  codebase_analysis.txt  mcp_config.json  requirements.txt  test_notion.py  webhook_tunnel.sh
backend/docs/architecture/: pipeline_architecture_and_stabilization.md
backend/raw_data/: engineering_onboarding.md  marketing_rules.json
backend/src/: api.py  main.py  mcp_server.py
backend/src/agents/: __init__.py  context_assembler.py  delegator.py  registry.py  skill_watcher.py  tool_gateway.py  webhook_dispatcher.py
backend/src/api/: server.py
backend/src/core/: acl.py  credential_store.py  models.py  search.py  strategic_hardening.py
backend/src/filters/: __init__.py
backend/src/generators/: skill_generator.py
backend/src/ingestion/: connector_manager.py  cortex-dashboard.html  github_connector.py  mcp_client.py  notion_connector.py  oauth_manager.py  parsers.py  slack_connector.py  sync_manager.py  webhook_server.py
backend/src/memory/: __init__.py
backend/src/middleware/: __init__.py  webhook_security.py
frontend/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tests/: __init__.py  conftest.py  test_external_agent.py  test_layer2_normalize.py  test_session_memory.py
(+35 files in other folders)
